--- a/MyPermissions/build.gradle
+++ b/MyPermissions/build.gradle
@@ -32,3 +32,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+/*编译失败请注释下面代码*/
+apply from :'help.gradle'
