--- a/MyPermissions/build.gradle
+++ b/MyPermissions/build.gradle
@@ -14,7 +14,9 @@ android {
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     }
-
+    buildFeatures {
+        buildConfig=false
+    }
     buildTypes {
         release {
             minifyEnabled false
